--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@arcgis/core": "^4.25.5",
     "@esri/calcite-components": "^1.0.7",
     "@esri/calcite-components-react": "^1.0.4",
-    "highlight.js": "^11.7.0",
     "ncp": "^2.0.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/arcgis-js-api": "^4.25.0",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
